# CredentialStore

./: .gitignore  .gitmodules  README.md
.github/workflows/: cpp_ci.yml  dotnet-core.yml  java-ci.yml
CSharp/: .editorconfig  CredentialStore.sln
CSharp/CredentialStore/: AssemblyInfo.cs  Credential.cs  CredentialFlag.cs  CredentialManager.cs  CredentialPersistance.cs  CredentialPersistence.cs  CredentialStore.csproj  CredentialType.cs  GlobalSuppressions.cs  ICredentialManager.cs  ICriticalCredentialHandle.cs  ICriticalCredentialHandleFactory.cs  IErrorCodeToStringService.cs  ILoggerAdapter.cs  IMarshalService.cs  INativeCredentialApi.cs  INativeHelper.cs  INativeInterop.cs  IPointerMath.cs  Moreland.Security.Win32.CredentialStore.xml  NativeCredentialApi.cs  NullLoggerAdapter.cs  TraceLoggerAdapter.cs
CSharp/CredentialStore.Cli/: ConsoleInputReader.cs  ConsoleLoggingAdapter.cs  ConsoleObscuredReader.cs  ConsoleOutputWriter.cs  CredentialExecuter.cs  CredentialStore.Cli.csproj  IConsoleInputReader.cs  ICredentialExecuter.cs  IObscuredReader.cs  ITextOutputWriter.cs  Program.cs
CSharp/CredentialStore.Cli/Properties/: launchSettings.json
CSharp/CredentialStore.DependencyInjection/: AssemblyInfo.cs  CredentialStore.DependencyInjection.csproj  CredentialStoreOptions.cs  CredentialStoreServiceCollectionExtensionMethods.cs  LoggerType.cs  Moreland.Security.Win32.CredentialStore.DependencyInjection.xml  MsExtensionsLoggerAdapter.cs
CSharp/CredentialStore.DependencyInjection.Tests/: CredentialStore.DependencyInjection.Tests.csproj  CredentialStoreServiceCollectionExtensionMethodsTests.cs  MsExtensionsLoggerAdapterTests.cs
CSharp/CredentialStore.Test/: CredentialManagerTest.cs  CredentialStore.Test.csproj  CredentialTest.cs
CSharp/CredentialStore.Tests/: CredentialManagerDependeniesAggregateTests.cs  CredentialManagerTest.cs  CredentialStore.Tests.csproj  CredentialTest.cs  CriticalCredentialHandleFactoryTest.cs  CriticalCredentialHandleTests.cs  ErrorCodeToStringServiceTests.cs  NativeInteropTests.cs  TestData.cs  TestDataSource.cs
CSharp/CredentialStore/NativeApi/: Credential.cs  CredentialApi.cs  CredentialAttriibute.cs  CredentialManagerDependeniesAggregate.cs  CriticalCredentialHandle.cs  CriticalCredentialHandleFactory.cs  EnumerateFlag.cs  ErrorCode.cs  ErrorCodeToStringService.cs  ExpectedError.cs  ICredentialApi.cs  ICredentialManagerDependeniesAggregate.cs  ICriticalCredentialHandle.cs  ICriticalCredentialHandleFactory.cs  IErrorCodeToStringService.cs  IMarshalService.cs  INativeInterop.cs  INativeUtilities.cs  IntermediateCredential.cs  Limits.cs  MarshalService.cs  NativeHelper.cs  NativeInterop.cs  NativeMethods.cs  NativeUtilities.cs  PointerMath.cs  PreserveFlag.cs
cpp/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json
cpp/include/: credential.h  credential_manager.h  credential_manager_interface.h  credential_manager_traits.h  credential_store_export.h  credential_type.h  either.h  error_code.h  error_details.h  persistence_type.h  result.h  result_code.h  result_detail.h  result_t.h
cpp/src/: CMakeLists.txt  credential.cpp  credential_factory_traits.cpp  credential_factory_traits.h  credential_manager.cpp  credential_manager_impl.h  credential_manager_impl_using_traits.h  credential_traits.cpp  credential_traits.h  credential_w_facade.h  win32_credential_traits.h
cpp/src/credential_store_cli/: CMakeLists.txt  cli_result_code.h  credential_executor.cpp  credential_executor.h  main.cpp  obscured_reader.cpp  obscured_reader.h  obscurred_reader.cpp  verb_type.h
cpp/src/shared_library/: CMakeLists.txt
cpp/src/static_library/: CMakeLists.txt
cpp/test/: CMakeLists.txt  credential_builder.cpp  credential_builder.h  credential_executor_test_fixture.cpp  credential_executor_test_fixture.h  credential_manager_test_fixture.cpp  credential_manager_test_fixture.h  credential_manager_tests.cpp  credential_tests.cpp  invalid_test_setup_exception.h  mock_credential_factory_traits.cpp  mock_credential_factory_traits.h  mock_credential_traits.cpp  mock_credential_traits.h
java/: credentialstore-cli.bat  credentialstore.code-workspace  launch.json.sample  pom.xml  tasks.json.sample
java/CredentialStore/: pom.xml
java/CredentialStore/src/main/java/moreland/win32/: Credential.java  CredentialFlag.java  CredentialPersistence.java  CredentialType.java
java/CredentialStore/src/main/java/moreland/win32/credentialstore/: Credential.java  CredentialFlag.java  CredentialPersistence.java  CredentialType.java  Pair.java
java/CredentialStore/src/test/java/moreland/win32/credentialstore/: CredentialTestCaseParameter.java  CredentialTests.java
java/CredentialStoreCLI/: pom.xml
java/credentialstore-cli/: pom.xml
java/credentialstore-cli/src/main/java/: module-info.java
java/credentialstore-cli/src/main/java/moreland/win32/credentialstore/cli/: Application.java  ApplicationConfiguration.java
java/credentialstore-cli/src/main/resources/: application.properties
java/credentialstore-cli/src/test/java/moreland/win32/credentialstore/cli/: ApplicationConfigurationTests.java
java/credentialstore-service/: pom.xml
java/credentialstore-service/src/main/java/: module-info.java
java/credentialstore-service/src/main/java/moreland/win32/credentialstore/: BadInjectionException.java  Credential.java  CredentialFlag.java  CredentialManager.java  CredentialPersistence.java  CredentialType.java  ErrorToStringService.java  ExpectedErrorCode.java  Guard.java  Pair.java  ServiceConfiguration.java  Win32CredentialManager.java  Win32Exception.java
java/credentialstore-service/src/main/java/moreland/win32/credentialstore/converters/: CredentialConverter.java  Win32CredentialConverter.java
java/credentialstore-service/src/main/java/moreland/win32/credentialstore/internal/: Advapi32Library.java  CredentialAttribute.java  (+13 more)
java/credentialstore-service/src/test/java/moreland/win32/credentialstore/: CredentialFlagTests.java  CredentialPersistenceTests.java  CredentialTests.java  CredentialTypeTests.java  Win32CredentialManagerTests.java
rust/CredentialStore/: Cargo.toml
(+16 files in other folders)
